--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
 pillow==11.0.0
+psycopg[binary]==3.3.2
 pyAn==0.1.3
 pyflowchart==0.3.1
 pyparsing==3.2.0
@@ -26,11 +27,6 @@ pytz==2024.2
 reportlab==4.4.4
 six==1.16.0
 sqlparse==0.5.3
+typing_extensions==4.15.0
 tzdata==2024.1
 wheel==0.44.0
-
-# Deployment / production dependencies
-gunicorn==20.1.0
-whitenoise==6.4.0
-dj-database-url==1.0.0
-psycopg2-binary==2.9.6
